parts crud inprogress

--- a/src/public/themes/theme2/part-pkg/part/form.html
+++ b/src/public/themes/theme2/part-pkg/part/form.html
@@ -51,10 +51,10 @@
                                         <div class="col-md-3">
                                             <div class="input-text form-group">
                                                 <label>
-                                                    Short Name
+                                                    Code
                                                     <sup class="mandatory">*</sup>
                                                 </label>
-                                                <input type="text" class="form-control required" ng-model="$ctrl.part.short_name" name="short_name" placeholder="Enter Short Name" autofocus />
+                                                <input type="text" class="form-control required" ng-model="$ctrl.part.code" name="code" placeholder="Enter Code" autofocus />
                                             </div><!-- Feild -->
                                         </div><!-- Column -->
                                         <div class="col-md-3">
@@ -69,9 +69,10 @@
                                         <div class="col-md-3">
                                             <div class="input-text form-group">
                                                 <label>
-                                                    Description
+                                                    Rate
+                                                    <sup class="mandatory">*</sup>
                                                 </label>
-                                                <input type="text" class="form-control required" ng-model="$ctrl.part.description" name="description" placeholder="Enter Name" />
+                                                <input type="text" class="form-control required" ng-model="$ctrl.part.rate" name="rate" placeholder="Enter Name" />
                                             </div><!-- Feild -->
                                         </div><!-- Column -->
                                         <div class="col-md-3">
