--- a/src/public/themes/theme2/part-pkg/part/list.html
+++ b/src/public/themes/theme2/part-pkg/part/list.html
@@ -27,7 +27,21 @@
             <div class="page-header-content-right">
                 <!-- Page Header Content -->
                 <div class="page-header-content button-block" ng-show="$ctrl.add_permission">
-                    <a href="#!/part-pkg/part/add" class="btn btn-primary my-tooltip" ng-shortcut="'meta+shift+n'" ng-shortcut-click data-title="ctrl+shift+n">Add New</a>
+                    <a href="#!/part-pkg/part/add" class="btn btn-primary my-tooltip" ng-shortcut="'meta+shift+n'" ng-shortcut-click data-title="ctrl+shift+n">
+                        Add New
+                    </a>
+                    <div class="dropdown">
+                        <a class="btn-extension dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            <img class="img-responsive" src="./public/theme/img/content/extension-white.svg" alt="Extension" />
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                            <li>
+                                <a href="#!/part-pkg/part/add">
+                                    Form
+                                </a>
+                            </li>
+                        </ul>
+                    </div><!-- Dropdown -->
                 </div><!-- Page Header Content -->
             </div><!-- Page Header Content Right -->
         </div><!-- Page Header Inner -->
@@ -84,7 +98,7 @@
                                 </label>
                                 <md-select ng-model="$ctrl.uom_id" md-on-close="clearSearchTerm()" data-md-container-class="selectdemoSelectHeader" placeholder="Select Uom" ng-change="onSelectedUom($ctrl.uom_id)">
                                     <md-select-header class="demo-select-header">
-                                        <input ng-model="searchTerm" type="search" placeholder="Search for a Uom" class="demo-header-searchbox md-text">
+                                        <input ng-model="searchTerm" type="search" placeholder="Search for a Uom" class="demo-header-searchbox md-text" ng-keydown="$event.stopPropagation()">
                                     </md-select-header>
                                     <md-optgroup>
                                         <md-option ng-value="uom.id" ng-repeat="uom in $ctrl.extras.uom_list | filter:searchTerm">{{uom.name}}</md-option>
@@ -100,7 +114,7 @@
                                 </label>
                                 <md-select ng-model="$ctrl.tax_code_id" md-on-close="clearSearchTerm()" data-md-container-class="selectdemoSelectHeader" placeholder="Select Tax Code" ng-change="onSelectedTaxCode($ctrl.tax_code_id)">
                                     <md-select-header class="demo-select-header">
-                                        <input ng-model="searchTerm" type="search" placeholder="Search for a Tax Code" class="demo-header-searchbox md-text">
+                                        <input ng-model="searchTerm" type="search" placeholder="Search for a Tax Code" class="demo-header-searchbox md-text" ng-keydown="$event.stopPropagation()">
                                     </md-select-header>
                                     <md-optgroup>
                                         <md-option ng-value="tax_code.id" ng-repeat="tax_code in $ctrl.extras.tax_code_list | filter:searchTerm">{{tax_code.name}}</md-option>
@@ -114,7 +128,7 @@
                                 <label>Status</label>
                                 <md-select ng-model="$ctrl.status" md-on-close="clearSearchTerm()" data-md-container-class="selectdemoSelectHeader" placeholder="Select Status" ng-change="onSelectedStatus($ctrl.status)">
                                     <md-select-header class="demo-select-header">
-                                        <input ng-model="searchTerm3" type="search" placeholder="Search for a From Account" class="demo-header-searchbox md-text">
+                                        <input ng-model="searchTerm3" type="search" placeholder="Search for a Status" class="demo-header-searchbox md-text" ng-keydown="$event.stopPropagation()">
                                     </md-select-header>
                                     <md-optgroup>
                                         <md-option ng-value="status.id" ng-repeat="status in $ctrl.extras.status | filter:searchTerm3">{{status.name}}</md-option>
