--- a/src/public/themes/theme2/part-pkg/part/form.html
+++ b/src/public/themes/theme2/part-pkg/part/form.html
@@ -68,7 +68,8 @@
                                         <div class="col-md-3">
                                             <div class="input-text form-group">
                                                 <label>
-                                                    Uom
+                                                    UOM
+                                                    <sup class="mandatory">*</sup>
                                                 </label>
                                                 <md-select ng-model="$ctrl.part.uom_id" md-on-close="clearSearchTerm()" data-md-container-class="selectdemoSelectHeader" placeholder="Select Uom">
                                                     <md-select-header class="demo-select-header">
